src/assets/styles/components/hero.scss
@use "../abstracts" as *;
#hero {
  overflow: hidden;
  z-index: 1;
  & .content {
    width: min(calc(100%), 200em);
    margin-inline: auto;
    & .card {
      position: relative;
      display: grid;
      grid-template-areas: "stack";
      &__text,
      &__image {
        min-height: 80vh;
        width: 100%;
        grid-area: stack;
      }

      &__text {
        z-index: 1;
        h2 {
          padding: 25vh 1em 0;
          filter: drop-shadow(2px 2px 6px var(--base));
          transition: all 300ms ease;
          span.prefix {
            font-size: clamp(2.7em, 10dvw, 9.5em);
          }

          span.name {
            translate: 0.2em 0;
            display: block;
            font-size: clamp(1.4em, 8dvw, 3em);
          }

          @media (width >= 50em) {
            padding: 50vh 5em 0;
          }
        }
        p {
          padding-inline: 1.6em;
        }
      }

      &__image {
        z-index: 0;
        align-content: end;

        img {
          width: 100%;
          max-width: 100em;
          margin-inline: auto 0;
          display: block;
          padding-block: 0 2em;
        }
      }
    }
  }
  .hero__menu {
    margin-top: 2em;
    width: min(30em, calc(100% - 2em));
    margin-inline: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1em;
    flex-wrap: wrap;
    a {
      color: $text;
      font-size: x-large;
      text-decoration: none;
      font-variant: small-caps;
      padding: 0.2em 0.6em;
      border-radius: 0.3em;
      @include transition300;
      &:hover {
        color: $base;
        background-color: $text;
      }
    }
  }
}

